{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 61,
  "lineage": "0641f08a-91e8-9131-129e-47d171a6c1d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "makeProcess-recipe-server-fr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00983e8a26e4c9bd9",
            "arn": "arn:aws:ec2:eu-west-3:622333992348:instance/i-0529d97d227c721d9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0529d97d227c721d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "makeprocess-recipe-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-095c2022959f4fc38",
            "private_dns": "ip-10-0-1-253.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.253",
            "public_dns": "ec2-13-38-60-57.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.60.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-038e4e53befd526b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022e251612ddad7fd",
            "tags": {
              "Name": "makeProcess-recipe-Server-FR",
              "Project": "makeProcess-recipe",
              "Region": "France"
            },
            "tags_all": {
              "Name": "makeProcess-recipe-Server-FR",
              "Project": "makeProcess-recipe",
              "Region": "France"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b6000a0ceaee6cb8"
            ]
          },
          "dependencies": [
            "aws_key_pair.makeprocess-recipe-key",
            "aws_security_group.makeProcess-recipe-sg",
            "aws_subnet.makeProcess-recipe-subnet-fr",
            "aws_vpc.makeProcess-recipe-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "makeProcess-recipe-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:622333992348:targetgroup/makeProcess-recipe-tg/8f537b3634033d18",
            "arn_suffix": "targetgroup/makeProcess-recipe-tg/8f537b3634033d18",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:622333992348:targetgroup/makeProcess-recipe-tg/8f537b3634033d18",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "makeProcess-recipe-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d36377cf1d39770"
          },
          "dependencies": [
            "aws_vpc.makeProcess-recipe-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "makeProcess-recipe-attach-fr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:622333992348:targetgroup/makeProcess-recipe-tg/8f537b3634033d18-20250131104714028900000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:622333992348:targetgroup/makeProcess-recipe-tg/8f537b3634033d18",
            "target_id": "i-0529d97d227c721d9"
          },
          "dependencies": [
            "aws_instance.makeProcess-recipe-server-fr",
            "aws_key_pair.makeprocess-recipe-key",
            "aws_lb_target_group.makeProcess-recipe-target-group",
            "aws_security_group.makeProcess-recipe-sg",
            "aws_subnet.makeProcess-recipe-subnet-fr",
            "aws_vpc.makeProcess-recipe-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "makeProcess-recipe-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:622333992348:route-table/rtb-0e30a33c44721c0e2",
            "id": "rtb-0e30a33c44721c0e2",
            "owner_id": "622333992348",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "makeProcess-recipe-RouteTable"
            },
            "tags_all": {
              "Name": "makeProcess-recipe-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d36377cf1d39770"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.makeProcess-recipe-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "makeProcess-recipe-rtb-fr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d75a1ddda45e707",
            "route_table_id": "rtb-0e30a33c44721c0e2",
            "subnet_id": "subnet-022e251612ddad7fd"
          },
          "dependencies": [
            "aws_route_table.makeProcess-recipe-rtb",
            "aws_subnet.makeProcess-recipe-subnet-fr",
            "aws_vpc.makeProcess-recipe-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "makeProcess-recipe-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:622333992348:security-group/sg-0b6000a0ceaee6cb8",
            "description": "Security Group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6000a0ceaee6cb8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "makeProcess-recipe-sg",
            "name_prefix": "",
            "owner_id": "622333992348",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "makeProcess-recipe-SG"
            },
            "tags_all": {
              "Name": "makeProcess-recipe-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d36377cf1d39770"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.makeProcess-recipe-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "makeProcess-recipe-subnet-fr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:622333992348:subnet/subnet-022e251612ddad7fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022e251612ddad7fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "622333992348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "makeProcess-recipe-Subnet-FR"
            },
            "tags_all": {
              "Name": "makeProcess-recipe-Subnet-FR"
            },
            "vpc_id": "vpc-09d36377cf1d39770"
          },
          "dependencies": [
            "aws_vpc.makeProcess-recipe-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "makeProcess-recipe-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:622333992348:vpc/vpc-09d36377cf1d39770",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-026db3fddd3c0fa38",
            "default_route_table_id": "rtb-09d9d5541563f92cd",
            "default_security_group_id": "sg-0e160422b0dc6e244",
            "dhcp_options_id": "dopt-065ab3cac6ac35322",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d36377cf1d39770",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d9d5541563f92cd",
            "owner_id": "622333992348",
            "tags": {
              "Name": "makeProcess-recipe-VPC",
              "Project": "makeProcess-recipe"
            },
            "tags_all": {
              "Name": "makeProcess-recipe-VPC",
              "Project": "makeProcess-recipe"
            }
          }
        }
      ]
    }
  ]
}